# KMA-THE

./: README.md  coop_teh.ipynb  main.py  pyproject.toml  quad.ipynb  requirements.txt  sudoku.py  teh.ipynb  uloha2.py
